# DEPRECATED_agl-audio-plugin

./: CMakeLists.txt  README.md  audiomgr.c  audiomgr.h  classify.c  classify.h  config.c  config.h  discover.c  discover.h  list.h  loopback.c  loopback.h  module.c  node.c  node.h  pulseaudio-agl.cfg  router.c  router.h  routerif.h  socketif.c  switch.c  switch.h  tracker.c  tracker.h  userdata.h  utils.c  utils.h  zone.c  zone.h
